[tool.poetry]
name = "statistical-python"
version = "0.1.0"
description = ""
authors = ["Mikail Khan <mikail@mikail-khan.com>"]
readme = "README.md"
packages = [{include = "statistical_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
